[gd_scene load_steps=16 format=2]

[ext_resource path="res://world/backgrounds/2MidnightScroll.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/backgrounds/3SpaceScroll.tscn" type="PackedScene" id=2]
[ext_resource path="res://world/backgrounds/1CloudScroll.tscn" type="PackedScene" id=3]
[ext_resource path="res://world/GUI/GameUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://world/GUI/theme.tres" type="Theme" id=5]
[ext_resource path="res://world/GUI/fonts/FutilePro.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://world/RetryScreen.gd" type="Script" id=7]
[ext_resource path="res://world/World.gd" type="Script" id=8]
[ext_resource path="res://music sounds/electrode-115161.mp3" type="AudioStream" id=9]
[ext_resource path="res://music sounds/indigo-946.mp3" type="AudioStream" id=10]
[ext_resource path="res://music sounds/my-kind-of-madness-mad-scientist-instrumental-electronic-dance-136405.mp3" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 6 )

[node name="Game" type="Node2D"]
script = ExtResource( 8 )

[node name="GameWorld" type="Node2D" parent="."]

[node name="Clouds" parent="GameWorld" instance=ExtResource( 3 )]

[node name="Midnight" parent="GameWorld" instance=ExtResource( 1 )]
visible = false

[node name="Space" parent="GameWorld" instance=ExtResource( 2 )]
visible = false

[node name="ScoreTimer" type="Timer" parent="GameWorld"]
wait_time = 0.084
autostart = true

[node name="CloudMusic" type="AudioStreamPlayer" parent="GameWorld"]
stream = ExtResource( 9 )

[node name="MidMusic" type="AudioStreamPlayer" parent="GameWorld"]
stream = ExtResource( 10 )

[node name="SpaceMusic" type="AudioStreamPlayer" parent="GameWorld"]
stream = ExtResource( 11 )

[node name="UserInterface" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="RetryScreen" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 7 )

[node name="RetryWindow" type="ColorRect" parent="RetryScreen"]
visible = false
modulate = Color( 1, 1, 1, 0.941176 )
margin_left = 10.0
margin_top = 42.0
margin_right = 738.0
margin_bottom = 973.0
color = Color( 0.314045, 0.302841, 0.347656, 1 )

[node name="DiedLabel" type="Label" parent="RetryScreen/RetryWindow"]
margin_left = 230.0
margin_top = 120.0
margin_right = 521.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 4 )
text = "You Died..."

[node name="RetryButton" type="Button" parent="RetryScreen/RetryWindow"]
margin_left = 270.0
margin_top = 256.0
margin_right = 456.0
margin_bottom = 307.0
theme = ExtResource( 5 )
text = "Retry?"

[node name="ShopButton" type="Button" parent="RetryScreen/RetryWindow"]
margin_left = 230.0
margin_top = 384.0
margin_right = 507.0
margin_bottom = 435.0
theme = ExtResource( 5 )
text = "Go To Shop"

[node name="MenuButton" type="Button" parent="RetryScreen/RetryWindow"]
margin_left = 246.0
margin_top = 504.0
margin_right = 495.0
margin_bottom = 555.0
theme = ExtResource( 5 )
text = "Main Menu"

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 328.0
margin_top = 8.0
margin_right = 444.0
margin_bottom = 31.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
uppercase = true

[node name="MoneyLabel" type="Label" parent="."]
margin_left = 647.0
margin_top = 8.0
margin_right = 763.0
margin_bottom = 31.0
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "0 $"
align = 1
uppercase = true

[node name="GameUI" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="GameWorld/ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="pressed" from="RetryScreen/RetryWindow/RetryButton" to="RetryScreen" method="_on_RetryButton_pressed"]
[connection signal="pressed" from="RetryScreen/RetryWindow/ShopButton" to="RetryScreen" method="_on_ShopButton_pressed"]
[connection signal="pressed" from="RetryScreen/RetryWindow/MenuButton" to="RetryScreen" method="_on_MenuButton_pressed"]

[editable path="GameWorld/Clouds"]
[editable path="GameWorld/Midnight"]
[editable path="GameWorld/Space"]
[editable path="GameUI"]
